[metadata]
name = tuflow_ensemble
description = tuflow ensemble runs processing tool
author = Taha Soomro
license = GPLv3
license_file = LICENSE.md
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.6
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9
    Programming Language :: Python :: 3 :: 3.10
    Programming Language :: Python :: 3 :: 3.11

[options]
packages =
    tuflow_ensemble
install_requires =
    pandas>=1.5.1
    matplotlib>=3.6.3
    seaborn>=0.12.2
    PyQt6>=6.4.2
python_requires >=3.6
package_dir =
    =src
zip_safe = no
